--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "tsx src/app.ts"
   },
   "dependencies": {
-    "@babel/parser": "^7.23.0",
-    "@babel/traverse": "^7.23.2",
+    "@babel/parser": "^7.26.2",
+    "@babel/traverse": "^7.25.9",
     "@octokit/rest": "^20.0.2",
     "@octokit/webhooks-definitions": "^3.67.3",
     "@types/node": "^20.8.3",
@@ -18,15 +18,18 @@
     "gpt-tokenizer": "^2.1.2",
     "groq-sdk": "^0.8.0",
     "octokit": "^3.1.1",
+    "python": "^0.0.4",
+    "tree-sitter": "^0.22.1",
+    "typescript": "^5.7.2",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@types/babel__traverse": "^7.20.3",
+    "@types/babel__parser": "^7.1.5",
+    "@types/babel__traverse": "^7.20.6",
     "@types/diff": "^5.0.7",
     "@types/xml2js": "^0.4.13",
     "csv-writer": "^1.6.0",
     "smee-client": "^1.2.3",
-    "tsx": "^4.19.2",
-    "typescript": "^5.2.2"
+    "tsx": "^4.19.2"
   }
 }
